--- a/source.css
+++ b/source.css
@@ -3,10 +3,10 @@ body{
 } 
 
 .back_ground_img{
-    width: 1920px;
-    height: 900px;
+    width: 100%;
+    /*height: 900px;*/
     margin-top: 0;
-    background-image: url("../img/bgi.png");
+    background-image: url("img/bgi.png");
     
 }
 
@@ -30,10 +30,13 @@ body{
 .button{
     width: 400px;
     display: flex;
-    justify-content: space-around;
+}
+
+.btn{
+    margin-right: 23px;
 }
 
 .hero{
-    margin-top: 450px;
-    margin-left: 500px;
+    margin-top: 409px;
+    margin-left: 425px;
 }
