--- a/source.css
+++ b/source.css
@@ -1,42 +1,47 @@
-body{
-    margin:0px;
-} 
-
 .back_ground_img{
     width: 100%;
-    /*height: 900px;*/
+    height: 730px;
     margin-top: 0;
     background-image: url("img/bgi.png");
+    background-size: cover;
     
 }
 
-.back_ground_img2{
-    width: 1920px;
-    height: 960px;
-    background-color: black;
+.hero{
+    margin-top: 300px;
+    margin-left: 330px;
 }
 
-.text_img{
-    display: flex;
-    width:1920px;
-    height: 400px;
-    flex-direction: row;
-    justify-content: space-around;
-}
 .hero-title{
-    font-size:60px;
+    font-family: "Inria Serif", serif;
+    font-size: 60px;
+    font-style: normal;
     color:white;
 }
+
 .button{
     width: 400px;
     display: flex;
+    .btn{
+        margin-right: 23px;
+    }
 }
 
-.btn{
-    margin-right: 23px;
-}
-
-.hero{
-    margin-top: 409px;
-    margin-left: 425px;
+.description{/*왜 이게 이미지야*/
+    width: 100%;
+    background-color: black;
+    font-family: "Inria Serif", serif;
+    font-style: normal;
+    color:white;
+    display: flex;
+    div{
+        margin-top: 50px;
+        width: 20%;
+        margin-left: 10%;
+        p{
+            margin-top: 10px;
+            width: 70%;
+            margin-bottom: 40px;
+        }
+    }
 }
