--- a/source.css
+++ b/source.css
@@ -45,3 +45,128 @@
         }
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+/*2번째 페이지!*/
+
+.back_ground_img2{
+    width: 100%;
+    height: 1760px;
+    background-color: black;
+    background-image: url("img/2bgi.png");
+    /* background-size: cover; */
+    
+}
+
+.button{
+    width: 400px;
+    display: flex;
+    .btn{
+        margin-right: 23px;
+    }
+}
+
+.top_bar2{
+    background-color: black;
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.text{
+    /* margin: 20px; */
+    display: flex;
+    height: 170px;
+    align-items: flex-end;
+    justify-content: space-around;
+    font-family: "Inria Serif", serif;
+    color: white;
+}
+.text1{
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-around;
+    font-family: "Inria Serif", serif;
+    color: white;
+}
+
+.test_img{
+    margin-top: 100px;
+    display: flex;
+    justify-content: center;
+}
+
+.img_prompt{
+    color:white;
+    font-family: "Inria Serif", serif;
+    display: flex;
+    margin-left: 190px;
+}
+
+
+.back_ground_img3{
+    background-color: black;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: center;
+    height: 500px;
+}
+
+.header_text{
+    color: white;
+    font-family: "Inria Serif", serif;
+    
+}
+
+.info_text{
+    margin-top: 30px;
+    color: white;
+    font-family: "Inria Serif", serif;
+}
+
+.back_ground_img4{
+    background-color: black;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: center;
+    height: 1000px;
+}
+
+.example_container{
+    display: flex;
+    justify-content: flex-start;
+    width: 600px;
+    align-items: center;
+}
+.outpainting{
+    color:white;
+    font-family: "Inria Serif", serif;
+    margin-right: 40px;
+}
+.demo{
+    color:white;
+    font-family: "Inria Serif", serif;
+}
+hr{
+    color: white;
+    height: 20px;
+    width: 600px;
+}
+
+.sample_img{
+    image
+}
+
