--- a/source.css
+++ b/source.css
@@ -4,12 +4,11 @@
     margin-top: 0;
     background-image: url("img/bgi.png");
     background-size: cover;
-    
 }
 
 .hero{
     margin-top: 300px;
-    margin-left: 330px;
+    width: 65%;
 }
 
 .hero-title{
@@ -27,17 +26,19 @@
     }
 }
 
-.description{/*왜 이게 이미지야*/
+.description{
     width: 100%;
     background-color: black;
     font-family: "Inria Serif", serif;
     font-style: normal;
     color:white;
     display: flex;
+    justify-content: center;
     div{
         margin-top: 50px;
         width: 20%;
-        margin-left: 10%;
+        margin-left: 5%;
+        margin-right: 5%;
         p{
             margin-top: 10px;
             width: 70%;
@@ -46,42 +47,34 @@
     }
 }
 
-
-
-
-
-
-
-
-
-
-
-/*2번째 페이지!*/
-
 .back_ground_img2{
     width: 100%;
     height: 1760px;
     background-color: black;
     background-image: url("img/2bgi.png");
-    /* background-size: cover; */
-    
 }
 
-.button{
-    width: 400px;
-    display: flex;
-    .btn{
-        margin-right: 23px;
-    }
-}
-
-.top_bar2{
-    background-color: black;
+.top_bar{
     width: 100%;
-    height: 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    div{
+        display: flex;
+        margin-left: 2%;
+        margin-right: 2%;
+        .dropdown{
+            font-family: "Inria Serif", serif;
+            font-style: normal;
+            color:white;
+            margin-right: 50px;
+            font-size:25px;
+        }
+    }
+    img{
+        margin-left: 10px;
+        margin-top: 5px;
+    }
 }
 
 .text{
@@ -165,8 +158,3 @@ hr{
     height: 20px;
     width: 600px;
 }
-
-.sample_img{
-    image
-}
-
