--- a/source.css
+++ b/source.css
@@ -139,15 +139,10 @@
 .example_container{
     display: flex;
     justify-content: flex-start;
-    width: 700px;
     align-items: center;
 }
-.outpainting{
-    color:white;
-    font-family: "Inria Serif", serif;
-    margin-right: 40px;
-}
-.demo{
+
+.custom_font{
     color:white;
     font-family: "Inria Serif", serif;
 }
