--- a/source.css
+++ b/source.css
@@ -7,8 +7,8 @@
 }
 
 .hero{
-    margin-top: 230px;
-    margin-left: 27%;
+    margin-top: 300px;
+    margin-left: 25%;
     width: 65%;
 }
 
@@ -23,7 +23,30 @@
     width: 400px;
     display: flex;
     .btn{
-        margin-right: 23px;
+        margin-right: 10%;
+    }
+}
+
+.top_bar{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    div{
+        display: flex;
+        margin-left: 2%;
+        margin-right: 2%;
+        .dropdown{
+            font-family: "Inria Serif", serif;
+            font-style: normal;
+            color:white;
+            margin-right: 50px;
+            font-size:25px;
+        }
+    }
+    img{
+        margin-left: 15px;
+        margin-top: 5px;
     }
 }
 
@@ -48,34 +71,43 @@
     }
 }
 
+@media screen and (max-width: 700px) { /*핸드폰 화면일때 변경될 css*/
+    .hero{
+        margin-top: 100px;
+        margin-left: 10px;
+        width: 80%;
+    }
+
+    .hero-title{
+        font-family: "Inria Serif", serif;
+        font-size: 40px;
+        font-style: normal;
+        color:white;
+    }
+
+    .button{
+        width: 100%;
+        display: block;
+    }
+
+    .top_bar div{
+        display: none;
+    }
+
+    .description{
+        display: block;
+        height: 900px;
+        div{
+            width: 80%;
+        }
+    }
+}
+
 .blur-bg-img{
     width: 100%;
     height: 1500px;
     background-color: black;
     background-image: url("img/2bgi.png");
-}
-
-.top_bar{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    div{
-        display: flex;
-        margin-left: 2%;
-        margin-right: 2%;
-        .dropdown{
-            font-family: "Inria Serif", serif;
-            font-style: normal;
-            color:white;
-            margin-right: 50px;
-            font-size:25px;
-        }
-    }
-    img{
-        margin-left: 10px;
-        margin-top: 5px;
-    }
 }
 
 .text{
