--- a/source.css
+++ b/source.css
@@ -214,15 +214,18 @@ body {
 .container {
     display: flex;
     height: 100vh;
-    color: black;
+    color: white;
+    margin: 0;
+    padding: 0;
+
 }
 
 .left {
     background-color: black;
     width: 520px;
     height: 100vh;
-    padding: 20px;
     border-right: 5px solid white;
+    padding-right: 20px;
 }
 
 .img-button {
@@ -265,6 +268,10 @@ body {
     }
 }
 
+.container2 {
+    display: flex;
+    justify-content: center;
+}
 .right {
     display: flex;
     flex-direction: column;
