--- a/source.css
+++ b/source.css
@@ -191,30 +191,18 @@ hr{
     margin-bottom: 250px;
 }
 
-
-
-
-
-
-
-
-
-
-
 /* input.html */
 
-.container {
+.split-box {
     display: flex;
     height: 100vh;
+    width: 100%;
     color: white;
-    margin: 0;
-    padding: 0;
-
 }
 
 .left {
     background-color: black;
-    width: 30%;
+    width: 35%;
     height: 100vh;
     border-right: 5px solid white;
     padding-right: 20px;
@@ -222,8 +210,9 @@ hr{
 
 .img-button {
     background: url("img/Button.png") no-repeat;
-    width: 451.85px;
-    height: 94px;
+    background-size: contain;
+    width: 97%;
+    height: 120px;
     margin-top: 30px;
     border: none;
 }
@@ -240,50 +229,43 @@ hr{
     }
     label{
         font-family: "Inria Serif", serif;
-        width: 471px;
-        height: 145px;
+        width: 97%;
+        height: 120px;
         background-color: #181612;
         color: #33353b;
         font-size: 36px;
         text-align: center;
-        line-height: 145px;
+        line-height: 120px;
     }
     input{
         display: none;
     }
     textarea{
-        width: 471px;
-        height: 145px;
+        width: 97%;
+        height: 120px;
         background-color: #181612;
         border-color: #181612;
         color: aliceblue;
     }
 }
 
-.container2 {
-    display: flex;
-    justify-content: center;
-}
 .right {
-    display: flex;
-    flex-direction: column;
     align-items: center;
     background-color: black;
-    padding: 20px;
-    width: 1300px;
+    width: 70%;    
 }
 
 .image-container {
-    margin-top: 100px;
+    
     margin-bottom: 20px;
     img{
-        width: 882px;
-        height: 450px;
+        width: 100%;
+        /* height: 450px; */
     }
 }
 
 .storyboard {
-    width: 882px;
+
     color: white;
     h5{
         font-family: "Inria Serif", serif;
