--- a/source.css
+++ b/source.css
@@ -222,7 +222,7 @@ hr{
     margin-left: 20px;
 }
 
-.custom-input{
+.custom-input{  
     margin-top: 20px;
     h5{
         font-family: "Inria Serif", serif;
@@ -249,23 +249,26 @@ hr{
     }
 }
 
-.right {
+#right {
     align-items: center;
     background-color: black;
-    width: 70%;    
-}
-
-.image-container {
-    
-    margin-bottom: 20px;
-    img{
-        width: 100%;
-        /* height: 450px; */
+    width: 70%;
+    h2{
+        margin-top: 35%;
+        text-align: center;
     }
 }
 
-.storyboard {
+.output-image {
+    margin-top: 70px;
+    margin-left: 20%;
+    margin-bottom: 20px;
+    width: 60%;
+}
 
+.storyboard {
+    margin-left: 20%;
+    width: 60%;
     color: white;
     h5{
         font-family: "Inria Serif", serif;
@@ -275,7 +278,6 @@ hr{
         width: 100%;
         height: 145px;
         background-color: #181612;
-        color: white;
         padding: 10px;
         border: none;
         border-radius: 10px;
@@ -286,14 +288,12 @@ hr{
     display: flex;
     justify-content: flex-end;
     margin-top: 20px;
-}
-
-.buttons .button-vr,
-.buttons .button-next {
-    background: url("img/Button.png") no-repeat;
-    width: 150px;
-    height: 50px;
-    border: none;
-    cursor: pointer;
-    border-radius: 10px;
+    button{
+        background: url("img/Button.png") no-repeat;
+        width: 150px;
+        height: 50px;
+        border: none;
+        cursor: pointer;
+        border-radius: 10px;
+    }
 }
