--- a/source.css
+++ b/source.css
@@ -202,7 +202,7 @@ hr{
 
 .left {
     background-color: black;
-    width: 35%;
+    width: 25%;
     height: 100vh;
     border-right: 5px solid white;
     padding-right: 20px;
@@ -252,7 +252,7 @@ hr{
 #right {
     align-items: center;
     background-color: black;
-    width: 70%;
+    width: 75%;
     h2{
         margin-top: 35%;
         text-align: center;
@@ -260,15 +260,15 @@ hr{
 }
 
 .output-image {
-    margin-top: 70px;
-    margin-left: 20%;
+    margin-top: 60px;
+    margin-left: 18%;
     margin-bottom: 20px;
-    width: 60%;
+    width: 64%;
 }
 
 .storyboard {
-    margin-left: 20%;
-    width: 60%;
+    margin-left: 18%;
+    width: 64%;
     color: white;
     h5{
         font-family: "Inria Serif", serif;
@@ -276,7 +276,7 @@ hr{
     }
     textarea{
         width: 100%;
-        height: 145px;
+        height: 97px;
         background-color: #181612;
         padding: 10px;
         border: none;
@@ -287,13 +287,19 @@ hr{
 .buttons {
     display: flex;
     justify-content: flex-end;
-    margin-top: 20px;
+    margin-top: 10px;
+    .button-vr{
+        background: url("img/VR_button.png") no-repeat;
+        background-size: contain;
+    }
+    .button-next{
+        background: url("img/Next_button.png") no-repeat;
+        background-size: contain;
+    }
     button{
-        background: url("img/Button.png") no-repeat;
-        width: 150px;
-        height: 50px;
+        width: 90px;
+        height: 36px;
         border: none;
-        cursor: pointer;
-        border-radius: 10px;
+        margin-left: 15px;
     }
 }
