--- a/source.css
+++ b/source.css
@@ -258,6 +258,7 @@ hr{
 }
 
 #right {
+    position: relative;
     align-items: center;
     background-color: black;
     width: 75%;
@@ -283,6 +284,7 @@ hr{
         margin-bottom: 10px;
     }
     textarea{
+        color: white;
         width: 100%;
         height: 97px;
         background-color: #181612;
@@ -311,3 +313,22 @@ hr{
         margin-left: 15px;
     }
 }
+
+#loading-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.8); /* 반투명 배경 */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+    display: none; /* 기본은 숨김 */
+  }
+  
+  .spinner-border {
+    width: 3rem;
+    height: 3rem;
+  }
